# jpeg_wrapper

./: CMakeLists.txt  XJPEG_wrapper.c  test.cpp
